main/default/objects/Product_Option_Line_Item__c/Product_Option_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Product Option Line Item</label>
    <nameField>
        <displayFormat>POLI-{0000}</displayFormat>
        <label>Product  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Option Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>