main/default/objects/Product_Option_Line_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Option Line Items</relationshipLabel>
    <relationshipName>Product_Option_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>