main/default/objects/Product_Option_Line_Item__c/fields/Clearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Date__c</fullName>
    <label>Clearance Date</label>
    <type>DateTime</type>
</CustomField>