main/default/objects/Product_Option_Line_Item__c/fields/Clearance_Status__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Status__c</fullName>
    <label>Clearance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Closed Market</fullName>
            </value>
            <value>
                <fullName>Clearance Not Applicable</fullName>
            </value>
            <value>
                <fullName>Service failed</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>