main/default/objects/Product_Option_Line_Item__c/fields/Is_Selected__c.field-meta.xml
<CustomField>
    <fullName>Is_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>