main/default/objects/Product_Option_Line_Item__c/fields/IsManualClearance__c.field-meta.xml
<CustomField>
    <fullName>IsManualClearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Clearance</label>
    <type>Checkbox</type>
</CustomField>