main/default/objects/Product_Option_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Option Line Items</relationshipLabel>
    <relationshipName>Product_Option_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>