main/default/objects/Product_Option_Line_Item__c/fields/Rich_Text_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_Notes__c</fullName>
    <label>Rich Text Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>