main/default/objects/Product_Option_Line_Item__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <label>Submission</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Product Option Line Items</relationshipLabel>
    <relationshipName>Product_Option_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>